--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Franco Joaquin Narvaez | WDD130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr">Franco Joaquin Narvaez</a>
+
+        </nav>
+    </header>
+    <main>
+        <h1>Franco Joaquin Narvaez | WDD 130</h1>
+        <img src="images/profile.png" alt="Franco joaquin profile picture" width="200">
+        <p>Hi there! My name is Franco Joaquin Narvaez, and I am excited to be part of the WDD130
+            course. I have a passion for web development and look forward to learning new skills and
+            techniques throughout this course. In my free time, I enjoy exploring new technologies,
+            working on personal projects, and i would like to connect with fellow developers. Let's
+            embark on this learning journey together!</p>
+    </main>
+    <footer>
+        <p>© 2026 Franco Joaquin Narvaez</p>
+    </footer>
+
 </body>
+
 </html>
