updated profile image

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Franco Joaquin Narvaez | WDD130</title>
+    <title>Franco Joaquin Narvaez | WDD 130</title>
 </head>
 
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr">Franco Joaquin Narvaez</a>
+            <a href="wwr">Rafting Website</a>
 
         </nav>
     </header>
     <main>
         <h1>Franco Joaquin Narvaez | WDD 130</h1>
-        <img src="images/profile.png" alt="Franco joaquin profile picture" width="200">
+        <img src="images/profile.webp" alt="Franco joaquin profile picture" width="200">
         <p>Hi there! My name is Franco Joaquin Narvaez, and I am excited to be part of the WDD130
             course. I have a passion for web development and look forward to learning new skills and
             techniques throughout this course. In my free time, I enjoy exploring new technologies,
