--- a/index.html
+++ b/index.html
@@ -1,29 +1,57 @@
+<!--Hi,it's week 3, let's do this!-->
+
 <!DOCTYPE html>
 <html lang="en-US">
+
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description">
+    <meta name="author" content="Joaquin Narvaez">
     <title>Franco Joaquin Narvaez | WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
+
     <header>
+
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Site</a>
-
+            <a href="wwr/site-plan-rafting.html">Siteplan</a>
+            <a href=" https://facebook.com.">Facebook</a>
         </nav>
+
     </header>
+
+
     <main>
         <h1>Franco Joaquin Narvaez | WDD 130</h1>
         <img src="images/profile.webp" alt="Franco joaquin profile picture" width="200">
-        <p>Hi there! My name is Franco Joaquin Narvaez, and I am excited to be part of the WDD130
-            course. I have a passion for web development and look forward to learning new skills and
-            techniques throughout this course. In my free time, I enjoy exploring new technologies,
-            working on personal projects, and i would like to connect with fellow developers. Let's
-            embark on this learning journey together!</p>
+        <p>Hi there! My name is Franco Joaquin Narvaez, and I am excited to be part of the
+            WDD130
+            course. I have a passion for web development and look forward to learning new skills
+            and
+            techniques throughout this course. In my free time, I enjoy exploring new
+            technologies,
+            working on personal projects, and i would like to connect with fellow developers.
+            Let's embark on this learning journey together!</p>
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/imgs/eyafcdinietc2piwwuclmjgus8kq6af3w0h3xz7a/full/640%2C/0/default"
+                  target="_blank"> Bahia blanca Argentina Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/imgs/af7pu96yy3qbqvv6nq1bz9p662c5coek29rsmtkp/full/500%2C/0/default"
+                  target="_blank"> Mendoza Argentina Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/imgs/92c33bcbf9cf85483e008d6871f8ced5f6d7b661/full/640%2C/0/default"
+                  target="_blank"> Salt Lake USA Temple</a></li>
+        </ul>
     </main>
+    <aside class="box">
+        <h2> San Juan </h2>
+        <img src="images/SanJuan.webp" alt="San Juan city">
+        <p>San Juan is a state in the center western Argentina</p>
+    </aside>
     <footer>
         <p>© 2026 Franco Joaquin Narvaez</p>
     </footer>
